Add boolean type
Added a typedef 'bool' for a boolean type.

Added two bool constants:
 - 'true' which has the integer value 1
 - 'false' which has the integer value 0

--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\CFlat\Language\Boolean.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9C532CDA-BB89-4A6A-934C-CBC5CD94BC02}</ProjectGuid>
     <RootNamespace>CFlatCore</RootNamespace>
