--- a/CFlat.Core/CFlat.Core.vcxproj.filters
+++ b/CFlat.Core/CFlat.Core.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClInclude Include="include\CFlat\Language\Null.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\CFlat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
