Fix constant definitions in header files

--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -16,6 +16,10 @@
     <ClInclude Include="include\CFlat\Language\Integer.h" />
     <ClInclude Include="include\CFlat\Language\Null.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Language\Boolean.c" />
+    <ClCompile Include="src\Language\Integer.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9C532CDA-BB89-4A6A-934C-CBC5CD94BC02}</ProjectGuid>
     <RootNamespace>CFlatCore</RootNamespace>
