Add memory management functions
Added the following memory management functions:
 - Memory_Allocate()
 - Memory_AllocateZeroed()
 - Memory_Deallocate()
 - Memory_Reallocate()

Added two functions for copying blocks of memory:
 - Memory_Copy()
 - Memory_CopyOffset()

--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -15,6 +15,10 @@
     <ClInclude Include="include\CFlat\Language\Boolean.h" />
     <ClInclude Include="include\CFlat\Language\Integer.h" />
     <ClInclude Include="include\CFlat\Language\Null.h" />
+    <ClInclude Include="include\CFlat\Memory.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Memory.c" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Language\Boolean.c" />
