--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -16,9 +16,11 @@
     <ClInclude Include="include\CFlat\Language\Integer.h" />
     <ClInclude Include="include\CFlat\Language\Null.h" />
     <ClInclude Include="include\CFlat\Memory.h" />
+    <ClInclude Include="include\CFlat\Object.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Memory.c" />
+    <ClCompile Include="src\Object.c" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Language\Boolean.c" />
