Add StringHelper and move String struct definition
The definition of the String struct was moved to a header
String-private.h in the src/ folder so that the definition is available
within the CFlat.Core but not outside.

In doing so, it is possible to allocate instances of String on the
stack, which allows efficient wrapping of regular C-strings.

--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -19,8 +19,11 @@
     <ClInclude Include="include\CFlat\Memory.h" />
     <ClInclude Include="include\CFlat\Object.h" />
     <ClInclude Include="include\CFlat\String.h" />
+    <ClInclude Include="src\CFlat\String-private.h" />
+    <ClInclude Include="src\CFlat\StringHelper.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\CFlat\StringHelper.c" />
     <ClCompile Include="src\CString.c" />
     <ClCompile Include="src\Memory.c" />
     <ClCompile Include="src\Object.c" />
