--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -90,7 +90,7 @@
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <OpenMPSupport>false</OpenMPSupport>
       <CompileAs>CompileAsC</CompileAs>
-      <DisableSpecificWarnings>4001; 4479; 4711</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4001; 4479; 4710; 4711; 4820</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -111,7 +111,7 @@
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <OpenMPSupport>false</OpenMPSupport>
       <CompileAs>CompileAsC</CompileAs>
-      <DisableSpecificWarnings>4001; 4479; 4711</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4001; 4479; 4710; 4711; 4820</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
