--- a/CFlat.Core/CFlat.Core.vcxproj.filters
+++ b/CFlat.Core/CFlat.Core.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="include\CFlat\Math.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\CFlat\Language\Char.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CFlat\CString.c">
@@ -90,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\CFlat\Math.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CFlat\Language\Char.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
