--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <ClInclude Include="include\CFlat.h" />
     <ClInclude Include="include\CFlat\CString.h" />
-    <ClInclude Include="include\CFlat\Language\Boolean.h" />
+    <ClInclude Include="include\CFlat\Language\Bool.h" />
     <ClInclude Include="include\CFlat\Language\Char.h" />
     <ClInclude Include="include\CFlat\Language\Double.h" />
     <ClInclude Include="include\CFlat\Language\Exceptions.h" />
