--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -15,6 +15,7 @@
     <ClInclude Include="include\CFlat\CString.h" />
     <ClInclude Include="include\CFlat\Language\Bool.h" />
     <ClInclude Include="include\CFlat\Language\Char.h" />
+    <ClInclude Include="include\CFlat\Language\Constants.h" />
     <ClInclude Include="include\CFlat\Language\Double.h" />
     <ClInclude Include="include\CFlat\Language\Exceptions.h" />
     <ClInclude Include="include\CFlat\ExceptionType.h" />
