--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -29,8 +29,8 @@
     <ClInclude Include="include\CFlat\StringBuilder.h" />
     <ClInclude Include="include\CFlat\StringReader.h" />
     <ClInclude Include="include\CFlat\Validate.h" />
-    <ClInclude Include="src\CFlat\String-private.h" />
-    <ClInclude Include="src\CFlat\StringBuilder-private.h" />
+    <ClInclude Include="src\CFlat\String.internal.h" />
+    <ClInclude Include="src\CFlat\StringBuilder.internal.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CFlat\Language\Char.c" />
@@ -100,6 +100,7 @@
       <OpenMPSupport>false</OpenMPSupport>
       <CompileAs>CompileAsC</CompileAs>
       <DisableSpecificWarnings>4001; 4479; 4710; 4711; 4820</DisableSpecificWarnings>
+      <PreprocessorDefinitions>CFLAT_CORE_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -121,6 +122,7 @@
       <OpenMPSupport>false</OpenMPSupport>
       <CompileAs>CompileAsC</CompileAs>
       <DisableSpecificWarnings>4001; 4479; 4710; 4711; 4820</DisableSpecificWarnings>
+      <PreprocessorDefinitions>CFLAT_CORE_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
