--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="include\CFlat\Validate.h" />
     <ClInclude Include="src\CFlat\String.internal.h" />
     <ClInclude Include="src\CFlat\StringBuilder.internal.h" />
+    <ClInclude Include="src\CFlat\StringReader.internal.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CFlat\Language\Char.c" />
