--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -21,6 +21,7 @@
     <ClInclude Include="include\CFlat\ExceptionType.h" />
     <ClInclude Include="include\CFlat\Language\Float.h" />
     <ClInclude Include="include\CFlat\Language\Integer.h" />
+    <ClInclude Include="include\CFlat\Language\Keywords.h" />
     <ClInclude Include="include\CFlat\Language\Null.h" />
     <ClInclude Include="include\CFlat\Math.h" />
     <ClInclude Include="include\CFlat\Memory.h" />
