--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -30,7 +30,12 @@
     <ClInclude Include="include\CFlat\StringBuilder.h" />
     <ClInclude Include="include\CFlat\StringReader.h" />
     <ClInclude Include="include\CFlat\Validate.h" />
+    <ClInclude Include="src\CFlat\Language\Double.internal.h" />
+    <ClInclude Include="src\CFlat\Language\Float.internal.h" />
+    <ClInclude Include="src\CFlat\Language\Integer.internal.h" />
     <ClInclude Include="src\CFlat\Macros.h" />
+    <ClInclude Include="src\CFlat\Number.h" />
+    <ClInclude Include="src\CFlat\NumberBuffer.h" />
     <ClInclude Include="src\CFlat\String.internal.h" />
     <ClInclude Include="src\CFlat\StringBuilder.internal.h" />
     <ClInclude Include="src\CFlat\StringReader.internal.h" />
@@ -43,6 +48,8 @@
     <ClCompile Include="src\CFlat\Language\Float.c" />
     <ClCompile Include="src\CFlat\Language\Integer.c" />
     <ClCompile Include="src\CFlat\Math.c" />
+    <ClCompile Include="src\CFlat\Number.c" />
+    <ClCompile Include="src\CFlat\NumberBuffer.c" />
     <ClCompile Include="src\CFlat\StringBuilder.c" />
     <ClCompile Include="src\CFlat\CString.c" />
     <ClCompile Include="src\CFlat\Memory.c" />
