--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -50,6 +50,7 @@
     <ClCompile Include="src\CFlat\Math.c" />
     <ClCompile Include="src\CFlat\Number.c" />
     <ClCompile Include="src\CFlat\NumberBuffer.c" />
+    <ClCompile Include="src\CFlat\StringBuilder.AppendFormat.c" />
     <ClCompile Include="src\CFlat\StringBuilder.c" />
     <ClCompile Include="src\CFlat\CString.c" />
     <ClCompile Include="src\CFlat\Memory.c" />
