Add assert macro

--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClInclude Include="include\CFlat.h" />
     <ClInclude Include="include\CFlat\CString.h" />
+    <ClInclude Include="include\CFlat\Language\Assert.h" />
     <ClInclude Include="include\CFlat\Language\Bool.h" />
     <ClInclude Include="include\CFlat\Language\Char.h" />
     <ClInclude Include="include\CFlat\Language\Constants.h" />
@@ -41,6 +42,7 @@
     <ClInclude Include="src\CFlat\StringReader.internal.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\CFlat\Language\Assert.c" />
     <ClCompile Include="src\CFlat\Language\Char.c" />
     <ClCompile Include="src\CFlat\ExceptionType.c" />
     <ClCompile Include="src\CFlat\Language\Double.c" />
