Add additional variable arguments overloads
Adds CString overloads for variable arguments functions in String and
StringBuilder.

Also fixes missing parameter validation in variable arguments functions
and String_Constructor.

--- a/CFlat.Core/CFlat.Core.vcxproj.filters
+++ b/CFlat.Core/CFlat.Core.vcxproj.filters
@@ -152,10 +152,10 @@
     <ClCompile Include="src\CFlat\NumberBuffer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\CFlat\StringBuilder.AppendFormat.c">
+    <ClCompile Include="src\CFlat\Language\Assert.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\CFlat\Language\Assert.c">
+    <ClCompile Include="src\CFlat\StringBuilder.AppendFormatStringV.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
