--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -12,8 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\CFlat.h" />
+    <ClInclude Include="include\CFlat\Collections\ICollection.h" />
     <ClInclude Include="include\CFlat\Collections\IEnumerable.h" />
     <ClInclude Include="include\CFlat\Collections\IEnumerator.h" />
+    <ClInclude Include="include\CFlat\Collections\IList.h" />
     <ClInclude Include="include\CFlat\Collections\List.h" />
     <ClInclude Include="include\CFlat\CString.h" />
     <ClInclude Include="include\CFlat\Language\Assert.h" />
@@ -24,6 +26,7 @@
     <ClInclude Include="include\CFlat\Language\Exceptions.h" />
     <ClInclude Include="include\CFlat\ExceptionType.h" />
     <ClInclude Include="include\CFlat\Language\Float.h" />
+    <ClInclude Include="include\CFlat\Language\Functions.h" />
     <ClInclude Include="include\CFlat\Language\Integer.h" />
     <ClInclude Include="include\CFlat\Language\Keywords.h" />
     <ClInclude Include="include\CFlat\Language\Null.h" />
@@ -48,8 +51,10 @@
     <ClInclude Include="src\CFlat\StringReader.internal.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\CFlat\Collections\ICollection.c" />
     <ClCompile Include="src\CFlat\Collections\IEnumerable.c" />
     <ClCompile Include="src\CFlat\Collections\IEnumerator.c" />
+    <ClCompile Include="src\CFlat\Collections\IList.c" />
     <ClCompile Include="src\CFlat\Collections\List.c" />
     <ClCompile Include="src\CFlat\Collections\ListEnumerator.c" />
     <ClCompile Include="src\CFlat\Language\Assert.c" />
